# adk-hackathon

./: .gitignore  README.md  deploy-adk.sh  readme.md
agents/agent/: agent.py  pyproject.toml  requirements.sh  requirements.txt
agents/agent/agents/bridgeoutput_agent/: agent.py
agents/agent/agents/bridgeoutput_agent/bridge_api/: __init__.py  client.py  data.py
agents/agent/agents/gmaps_agent/: agent.py
agents/agent/agents/google_search_agent/: agent.py
agents/agent/agents/report_writer_agent/: agent.py
agents/agent/bridgeoutput_mls/: .cursorule  Dockerfile  comparable_properties.html  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py
