[project]
name = "mcp-servers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "mcp>=1.9.3",
    "httpx",
    "requests>=2.32.3",
    "geopandas>=1.0.1",
    "shapely>=1.8.0",
    "pandas>=1.0.0",
    "python-dotenv>=0.9.0",
    "fastmcp",
]

[tool.setuptools]
packages = ["remcp", "bridge_api"]
package-dir = {"" = "src"}
